# SPLRadioRoom

./: .clang-format  .cproject  .gitattributes  .gitignore  .gitmodules  .project  .travis.yml  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CopyOfCMakeCache.txt  Makefile  README.md  SPLRadioRoom.ino  mav.tlog  mav.tlog.raw  toolchain-arm-linux.cmake  toolchain-arm-windows.cmake  toolchain-jetson.cmake  toolchain-x64-windows.cmake
.github/: FUNDING.yml
MAVLinkTest/: HighLatencyMsg.cpp  HighLatencyMsg.h  MAVLinkSerial.cpp  MAVLinkTest.ino
RadioRoom/: Makefile
RadioRoom/include/: HighLatencyMsg.h  IridiumSBD.h  MAVLinkLogger.h  MAVLinkSerial.h  SPLConfig.h  SPLRadioRoom.h  Serial.h
RadioRoom/include/mavlink/include/ASLUAV/: ASLUAV.h  mavlink_msg_fw_soaring_data.h  mavlink_msg_sens_mppt.h  version.h
RadioRoom/include/mavlink/include/ardupilotmega/: mavlink.h
RadioRoom/include/mavlink/include/common/: mavlink_msg_servo_output_raw.h
RadioRoom/include/mavlink/include/matrixpilot/: mavlink_msg_serial_udb_extra_f21.h  mavlink_msg_serial_udb_extra_f2_a.h  mavlink_msg_serial_udb_extra_f2_b.h
RadioRoom/include/mavlink/include/minimal/: mavlink_msg_heartbeat.h
RadioRoom/include/mavlink/include/slugs/: mavlink_msg_cpu_load.h  mavlink_msg_novatel_diag.h  mavlink_msg_slugs_configuration_camera.h  mavlink_msg_slugs_navigation.h  mavlink_msg_volt_sensor.h  slugs.h  testsuite.h
RadioRoom/include/mavlink/include/standard/: version.h
RadioRoom/src/: HighLatencyMsg.cpp  IridiumSBD.cpp  MAVLinkLogger.cpp  MAVLinkSerial.cpp  SPLConfig.cpp  SPLRadioRoom.cpp  Serial.cpp  radioroom.cpp
RadioRoom/tests/: ISBDTest.cpp
RockBLOCKChat/: RockBLOCKChat.ino
SPLRadioRoom/: BLEConfig.cpp  BLEConfig.h  HighLatencyMsg.cpp  HighLatencyMsg.h  IridiumSBD.cpp  IridiumSBD.h  MAVLinkSerial.cpp  MAVLinkSerial.h  SPLConfig.cpp  SPLConfig.h  SPLRadioRoom.ino
arduino/: README.md
arduino/MAVLinkTest/: HighLatencyMsg.cpp  MAVLinkTest.ino
arduino/MAVLinkTest/mavlink/include/ASLUAV/: mavlink_msg_sens_atmos.h
arduino/MAVLinkTest/mavlink/include/ardupilotmega/: mavlink_msg_meminfo.h  testsuite.h
arduino/MAVLinkTest/mavlink/include/autoquad/: mavlink_msg_aq_telemetry_f.h  testsuite.h  version.h
arduino/MAVLinkTest/mavlink/include/matrixpilot/: mavlink_msg_airspeeds.h  (+6 more)
arduino/RockBLOCKChat/: RockBLOCKChat.ino
arduino/SPLRadioRoom/: HighLatencyMsg.h  IridiumSBD.h  MAVLinkSerial.h  SPLConfig.h
etc/: radioroom.conf
etc/logrotate.d/: radioroom_lr.conf
etc/rsyslog.d/: radioroom_log.conf
etc/systemd/system/: radioroom.service
hardware/: rpi-radioroom.md
hardware/enclosure1/: Back.stl  Base.stl  Front.stl  Top.stl
include/: Serial.h  version.h
include/mavlink/include/ASLUAV/: mavlink_msg_asluav_status.h
include/mavlink/include/autoquad/: mavlink_msg_aq_esc_telemetry.h
include/mavlink/include/matrixpilot/: mavlink_msg_serial_udb_extra_f13.h  mavlink_msg_serial_udb_extra_f19.h  mavlink_msg_serial_udb_extra_f8.h
include/mavlink/include/message_definitions/: minimal.xml
include/mavlink/include/minimal/: mavlink.h  testsuite.h
include/mavlink/include/slugs/: mavlink_msg_control_surface.h  mavlink_msg_sensor_bias.h
libs/inih/include/: ini.h
libs/mavio/include/: CircularBuffer.h  IridiumSBD.h  Logger.h  MAVLinkAutopilot.h  MAVLinkChannel.h  MAVLinkISBD.h  MAVLinkISBDChannel.h  MAVLinkLib.h  MAVLinkLogger.h  MAVLinkSerial.h  MAVLinkTCP.h  MAVLinkTCPChannel.h  Serial.h
libs/mavio/src/: IridiumSBD.cc  Logger.cc  MAVLinkAutopilot.cc  MAVLinkISBD.cc  MAVLinkISBDChannel.cc  MAVLinkLogger.cc  MAVLinkSerial.cc  MAVLinkTCP.cc  MAVLinkTCPChannel.cc  Serial.cc
libs/mavlink/include/ASLUAV/: mavlink_msg_aslctrl_debug.h  mavlink_msg_ekf_ext.h  mavlink_msg_sens_batmon.h  testsuite.h
libs/mavlink/include/matrixpilot/: mavlink.h  mavlink_msg_flexifunction_buffer_function.h  mavlink_msg_flexifunction_directory.h  mavlink_msg_flexifunction_directory_ack.h  mavlink_msg_serial_udb_extra_f15.h  mavlink_msg_serial_udb_extra_f17.h  mavlink_msg_serial_udb_extra_f4.h  mavlink_msg_serial_udb_extra_f7.h
libs/mavlink/include/message_definitions/: autoquad.xml  matrixpilot.xml  paparazzi.xml
libs/mavlink/include/minimal/: minimal.h  version.h
libs/mavlink/include/slugs/: mavlink_msg_ptz_status.h  mavlink_msg_sensor_diag.h
libs/mavlink/include/standard/: mavlink.h
libs/mavlink/include/test/: mavlink.h
libs/mavlink/include/uAvionix/: mavlink.h  testsuite.h
libs/timelib/include/: timelib.h
pack/common/etc/: radioroom.conf
pack/common/etc/logrotate.d/: radioroom_lr.conf
pack/common/etc/rsyslog.d/: radioroom_log.conf
pack/jetson/etc/: radioroom.conf
pack/raspbian/etc/: radioroom.conf
sketches/MAVLinkTest/: MAVLinkSerial.cpp
sketches/SPLRadioRoom/: IridiumSBD.cpp  MAVLinkSerial.cpp  SPLConfig.cpp  SPLRadioRoom.ino
src/: CameraHandler.cc  CameraHandler.h  CircularBuffer.h  Config.cc  Config.h  INIReader.cc  INIReader.h  IridiumSBD.cc  IridiumSBD.cpp  IridiumSBD.h  MAVLinkAutopilot.cc  MAVLinkAutopilot.h  MAVLinkChannel.h  MAVLinkHandler.cc  MAVLinkHandler.h  MAVLinkISBD.cc  MAVLinkISBD.h  MAVLinkISBDChannel.cc  MAVLinkISBDChannel.h  MAVLinkLib.h  MAVLinkLogger.cc  MAVLinkLogger.cpp  MAVLinkLogger.h  MAVLinkQueue.h  MAVLinkSBD.cc  MAVLinkSBD.cpp  MAVLinkSBD.h  MAVLinkSerial.cc  MAVLinkSerial.cpp  MAVLinkSerial.h  MAVLinkTCP.cc  MAVLinkTCP.h  MAVLinkTCPChannel.cc  MAVLinkTCPChannel.h  MAVReport.cc  MAVReport.h  SPLConfig.cc  SPLConfig.cpp  SPLConfig.h  SPLRadioRoom.cc  (+12 more)
tests/: CircularBufferTest.cc  CustomSerializationTest.cc  ISBDTest.cc  MAVLinkAutopilotTest.cc  MAVLinkISBDChannelTest.cc  MAVLinkParseTest.cc  MAVLinkTCPChannelTest.cc  MAVLinkTest.cc  MAVLinkTest.cpp  Makefile  TimeLibTest.cc
(+56 files in other folders)
